<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>cz.tvrzna</groupId>
	<artifactId>jackie</artifactId>
	<version>0.4.3</version>

	<name>Jackie</name>
	<description>Simple JSON serialization and deserialization from/to object.</description>
	<url>https://github.com/tvrzna/Jackie</url>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://github.com/tvrzna/Jackie/blob/master/LICENSE</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Michal Tvrzník</name>
			<email>emporeor@gmail.com</email>
			<organization>tvrzna.cz</organization>
			<organizationUrl>https://github.com/tvrzna/</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:https://github.com/tvrzna/Jackie.git</connection>
		<developerConnection>scm:git:https://github.com/tvrzna/Jackie.git</developerConnection>
		<url>https://github.com/tvrzna/Jackie</url>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.version>3.8.1</maven.compiler.version>
		<maven.jar.version>3.2.2</maven.jar.version>
		<maven.javadoc.version>3.4.0</maven.javadoc.version>
		<maven.source.version>3.2.1</maven.source.version>
		<maven.surefire.version>2.22.2</maven.surefire.version>
		<maven.gpg.version>3.0.1</maven.gpg.version>
		<java.version>1.8</java.version>

		<junit.version>5.9.0</junit.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>${maven.javadoc.version}</version>
						<configuration>
							<javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
							<source>8</source>
						</configuration>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>${maven.source.version}</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<phase>verify</phase>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>${maven.gpg.version}</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven.jar.version}</version>
				<configuration>
					<archive>
						<manifestEntries>
							<Project-Name>${project.name}</Project-Name>
							<Project-Version>${project.version}</Project-Version>
							<Specification-Title>${project.name}</Specification-Title>
							<Specification-Version>${project.version}</Specification-Version>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven.surefire.version}</version>
			</plugin>
		</plugins>
	</build>
</project>
